# lakshana

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  test.yml
benchmarks/: README.md  metrics.py  run.py
benchmarks/data/aircraft/: README.md  generate.py  manifest.json  run_for_demo.py  synth_data.py
benchmarks/data/aircraft/documents/: flight_test_00.txt  flight_test_01.txt  flight_test_02.txt  flight_test_03.txt  flight_test_04.txt  flight_test_05.txt  flight_test_06.txt  flight_test_07.txt  flight_test_08.txt  flight_test_09.txt  maintenance_inspection_00.txt  maintenance_inspection_01.txt  maintenance_inspection_02.txt  maintenance_inspection_03.txt  maintenance_inspection_04.txt  maintenance_inspection_05.txt  maintenance_inspection_06.txt  maintenance_inspection_07.txt  maintenance_inspection_08.txt  maintenance_inspection_09.txt  service_bulletin_00.txt  service_bulletin_01.txt  service_bulletin_02.txt  service_bulletin_03.txt  service_bulletin_04.txt  service_bulletin_05.txt  service_bulletin_06.txt  service_bulletin_07.txt  service_bulletin_08.txt  service_bulletin_09.txt
benchmarks/data/bfsi/: README.md  manifest.json
benchmarks/data/bfsi/documents/: bank_statement_00.txt  bank_statement_01.txt  bank_statement_02.txt  bank_statement_03.txt  bank_statement_04.txt  form_26as_00.txt  form_26as_01.txt  form_26as_02.txt  form_26as_03.txt  form_26as_04.txt  gst_invoice_00.txt  gst_invoice_01.txt  gst_invoice_02.txt  gst_invoice_03.txt  gst_invoice_04.txt  itr_form_00.txt  (+19 more)
benchmarks/data/synthetic/: manifest.json
benchmarks/results/: synthetic_groq_llama33_70b.json
docs/: launch.md
examples/: export_json_schema.py  quickstart.py
site/: README.md  index.html
site/demo/: build.py  data.json  demo.css  index.html
src/lakshana/: __init__.py  _utils.py  cli.py  core.py  ingest.py  llm.py
tests/: test_core.py
(+50 files in other folders)
