[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakshana"
version = "0.1.0"
description = "Zero-config schema discovery for document collections. Drop a folder of PDFs, get a JSON Schema."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Micky Droch" }]
keywords = ["document-extraction", "schema-discovery", "clustering", "llm", "umap", "hdbscan", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
    "sentence-transformers>=2.0",
    "pdfplumber>=0.11",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
google = ["google-generativeai>=0.5"]
all = [
    "anthropic>=0.40",
    "openai>=1.0",
    "google-generativeai>=0.5",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
]

[project.scripts]
lakshana = "lakshana.cli:main"

[project.urls]
Homepage = "https://github.com/mickyaero/lakshana"
Repository = "https://github.com/mickyaero/lakshana"
Issues = "https://github.com/mickyaero/lakshana/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lakshana = ["py.typed"]

[tool.ruff]
line-length = 110
target-version = "py310"
